--- a/Embedded_c/Lesson2/Makefile
+++ b/Embedded_c/Lesson2/Makefile
@@ -1,21 +1,21 @@
 #@Copyright : Nadine
 compiler = arm-none-eabi-
-CFLAGS = -mcpu=925ej-s
+CFLAGS = -mcpu=arm926ej-s
 INCS = -I .
 LIBS = 
 SRC = $(wildcard *.c) # anything  .c
 OBJ = $(SRC:.c=.o)    # replace .c with .o 
 As = $(wildcard *.s) 
 AsOBJ = $(As:.s=.o)   
-proj_name = learn.bin
-all: $(proj_name)
+proj_name = learn
+all: $(proj_name).bin
 	@echo "Build is done"
 
 %.o: %.s
-	$(Compiler)as.exe  $(CFLAGS) $< -o $@
+	$(compiler)as.exe $(CFLAGS) $< -o $@
 
 %.o: %.c
-	$(Compiler)as.exe  $(CFLAGS) $< -o $@
+	$(compiler)gcc.exe -c $(INCS) $(CFLAGS) $< -o $@
 
 $(proj_name).elf: $(OBJ) $(AsOBJ)
 	$(compiler)ld.exe -T linker_script.ld $(LIBS) $(OBJ) $(AsOBJ) -o $@ -Map=Map_file.map
